--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/hashijun/zendesk-incident-protector#readme",
   "devDependencies": {
     "chai": "^4.1.2",
+    "hoek": "^5.0.3",
     "jquery": "^3.2.1",
     "jsdom": "^11.5.1",
     "mocha": "^4.1.0",
