--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "chai": "^4.1.2",
     "extend": ">=3.0.2",
     "hoek": "^5.0.3",
-    "jquery": "^3.2.1",
+    "jquery": ">=3.4.0",
     "jsdom": "^12.0.0",
     "just-extend": ">=4.0.0",
     "lodash": ">=4.17.11",
